# esp32-p4-jit

./: .gitignore  LICENSE  PROTOCOL.md  README.md  TRM.md
components/p4_jit/: CMakeLists.txt  Kconfig  p4_jit_readme.md  sdkconfig.defaults.p4_jit
components/p4_jit/include/: p4_jit.h
components/p4_jit/src/: commands.c  commands.h  p4_jit.c  protocol.c  protocol.h  usb_transport.c  usb_transport.h
config/: numpy_types.yaml  std_types.h  toolchain.yaml
docs_debr/: LIMITATIONS.md  LIMITATIONS_EXTENDED.md  README.md  SMART_ARGS.md
esp32_loader/: signature_parser.py  symbol_extractor.py  wrapper_builder.py  wrapper_generator.py
firmware/: CMakeLists.txt  sdkconfig  sdkconfig.defaults.esp32p4
firmware/main/: main.c
host/p4jit/: __init__.py  p4jit.py
p4_jit/: jit_session.py  remote_function.py  smart_args.py
p4_jit_firmware/: CMakeLists.txt  sdkconfig  sdkconfig.defaults.esp32p4
p4_jit_firmware/main/: CMakeLists.txt  main.c  protocol.c  usb_transport.c
projects/esp_dl/esp32-p4-vehicle-classifier/firmware/main/: CMakeLists.txt  app_main.cpp  app_wrapper.cpp  idf_component.yml
tests/examples/: example_multi_func.py  example_simple.py  metadata.json
tests/test_array_sum/: test_sum.py
tests/test_biquad/: asm.txt  test_biquad_plot.py
tests/test_biquad_optimize/: asm.txt  test_biquad.py  test_biquad_plot.py  test_biquad_simple.py
tests/test_complex_c/: asm.txt  test_complex_c.py
tests/test_jit_demo/: asm.txt  jit_demo.py
tests/test_smart_args/: test_smart.py
usb_hs_transfer_interface/: CMakeLists.txt  p4_usb_hs.py
(+132 files in other folders)
